--- a/css/layout.css
+++ b/css/layout.css
@@ -112,7 +112,7 @@ div.breadcrumb ul li a:hover {
   }
 
   .header {
-    height: 10%;
+    height: 60px;
     background-color: #333333;
     display: flex;
     flex-wrap: wrap;
@@ -289,7 +289,7 @@ div.breadcrumb ul li a:hover {
     float: left;
     height: 100%;
   }
-
+  
   .navbar a {
     float: left;
     font-size: 16px;
@@ -331,7 +331,7 @@ div.breadcrumb ul li a:hover {
   }
 
   .header {
-    height: 10%;
+    height: 60px;
     background-color: #333333;
     display: flex;
     flex-wrap: wrap;
