--- a/css/layout3.css
+++ b/css/layout3.css
@@ -123,25 +123,6 @@ div.breadcrumb ul li a:hover {
     width: 100%;
     z-index: 1;
     font-family: "Roboto";
-    flex: 0;
-  }
-
-  .header ul {
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    position: fixed;
-    left: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    background: #ffffff;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    -webkit-transition: left 0.3s;
-    -o-transition: left 0.3s;
-    transition: left 0.3s;
   }
 
   .header .logo {
@@ -154,28 +135,6 @@ div.breadcrumb ul li a:hover {
     flex-wrap: wrap;
     align-items: center;
     height: 60px;
-  }
-
-  .header ul li a {
-    padding: 10px;
-    font-size: 16px;
-    height: auto;
-    line-height: normal;
-    color: #555555;
-  }
-
-  .header ul .close {
-    display: block;
-  }
-
-  .header .icon-bar {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-
-  .header ._Menus-show {
-    left: 0;
   }
 
   .header .logo a img {
@@ -324,6 +283,29 @@ div.breadcrumb ul li a:hover {
     flex: 1;
     padding: 0 10px;
     justify-content: center;
+    flex: 0;
+  }
+
+  .navbar ul li a {
+    padding: 10px;
+    font-size: 16px;
+    height: auto;
+    line-height: normal;
+    color: #555555;
+  }
+
+  .navbar ._Menus-show {
+    left: 0;
+  }
+
+  .navbar .icon-bar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
+  .navbar ul .close {
+    display: block;
   }
 
   .dropdown {
@@ -516,9 +498,6 @@ div.breadcrumb ul li a:hover {
     cursor: pointer;
     padding: 15px;
     border-radius: 4px;
-  }
-  .header .navbar ._Menus-show {
-    left: 0;
   }
 }
 
