--- a/css/horarios.css
+++ b/css/horarios.css
@@ -104,18 +104,19 @@
   }
 
   .table-body {
+    display: -webkit-box;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     min-height: 100vh;
-    padding: 2rem 0;
+    padding: 4rem 0;
     background-color: white;
   }
 
   table {
     width: 100%;
-    max-width: 60em;
+    max-width: 30em;
   }
   table tr:nth-child(even) th {
     color: #ccc;
