--- a/css/horarios.css
+++ b/css/horarios.css
@@ -114,7 +114,7 @@
 
   table {
     width: 100%;
-    max-width: 60em;
+    max-width: max-content;
   }
   table tr:nth-child(even) th {
     color: #ccc;
