--- a/css/bases.css
+++ b/css/bases.css
@@ -67,7 +67,7 @@
     background-color: #eee;
     color: #444;
     cursor: pointer;
-    padding: 1.5%;
+    padding: 18px;
     width: 100%;
     border: none;
     text-align: left;
