--- a/css/horarios.css
+++ b/css/horarios.css
@@ -107,13 +107,14 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    min-height: 100vh;
     padding: 4rem 0;
     background-color: white;
   }
 
   table {
     width: 100%;
-    max-width: 5em;
+    max-width: 60em;
   }
   table tr:nth-child(even) th {
     color: #ccc;
